# AgentOS

./: README.md  plan.md
backend/: Cargo.toml  config.yaml
backend/data/: agentos-state.json  agentos.db
backend/src/: error.rs  main.rs  state.rs
backend/src/api/v1/: handlers.rs  routes.rs
backend/src/config/: config.rs
backend/src/domain/: agent.rs  context.rs  learning.rs  memory.rs  mod.rs  model.rs  session.rs  task.rs  tool.rs
backend/src/executor/: sandbox.rs
backend/src/runtime/: agent_runtime.rs  mod.rs  scheduler.rs  validation.rs  workspace_context.rs
backend/src/storage/: file_store.rs  sqlite_store.rs
backend/tests/: config_test.rs  error_test.rs  runtime_scheduler_test.rs
docs/: README.md  api-data-model.md  architecture.md  design.md  overview.md  reference-baseline.md  roadmap.md  runtime-learning.md  technical-debt.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
